--- a/index.html
+++ b/index.html
@@ -131,4 +131,42 @@
     </div>
   </div>
 </section>
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-Chemistry">
+          <video poster="" id="Chemistry" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/Chemistry.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-Clean_table">
+          <video poster="" id="Clean_table" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/Clean_table.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-Coffee">
+          <video poster="" id="Coffee" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/Coffee.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-Pizza">
+          <video poster="" id="Pizza" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/Pizza.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-Robustness">
+          <video poster="" id="Robustness" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/Robustness.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </html>
