modified:   index.html 	new file:   static/videos/10_insert_box4X.mp4 	new file:   static/videos/11_brush_pan4X.mp4 	new file:   static/videos/12_spread_sauce4X.mp4 	new file:   static/videos/13_pick_toy_drawer4X.mp4 	new file:   static/videos/14_pour_cup4X.mp4 	new file:   static/videos/1_open_drawer4X.mp4 	new file:   static/videos/2_stack_block4X.mp4 	new file:   static/videos/3_open_oven4X.mp4 	new file:   static/videos/4_pick_mango_plate4X.mp4 	new file:   static/videos/5_press_button4X.mp4 	new file:   static/videos/6_open_microwave_oven4X.mp4 	new file:   static/videos/7_put_tray_in_oven4X.mp4 	new file:   static/videos/8_turn_on_oven4X.mp4 	new file:   static/videos/9_sweep_table4X.mp4 	new file:   static/videos/clean_pan4X.mp4 	new file:   static/videos/open_oven4X.mp4 update

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="item item-Clean_table">
           <video poster="" id="Clean_table" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/Clean_table.mp4"
+            <source src="./static/videos/Clea_table.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -162,6 +162,102 @@
         <div class="item item-Robustness">
           <video poster="" id="Robustness" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/Robustness.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-1_open_drawer4X">
+          <video poster="" id="1_open_drawer4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/1_open_drawer4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-2_stack_block4X">
+          <video poster="" id="2_stack_block4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/2_stack_block4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-3_open_oven4X">
+          <video poster="" id="3_open_oven4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/3_open_oven4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-4_pick_mango_plate4X">
+          <video poster="" id="4_pick_mango_plate4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/4_pick_mango_plate4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-5_press_button4X">
+          <video poster="" id="5_press_button4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/5_press_button4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-6_open_microwave_oven4X">
+          <video poster="" id="6_open_microwave_oven4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/6_open_microwave_oven4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-7_put_tray_in_oven4X">
+          <video poster="" id="7_put_tray_in_oven4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/7_put_tray_in_oven4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-8_turn_on_oven4X">
+          <video poster="" id="8_turn_on_oven4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/8_turn_on_oven4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-9_sweep_table4X">
+          <video poster="" id="9_sweep_table4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/9_sweep_table4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-10_insert_box4X">
+          <video poster="" id="10_insert_box4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/10_insert_box4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-11_brush_pan4X">
+          <video poster="" id="11_brush_pan4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/11_brush_pan4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-12_spread_sauce4X">
+          <video poster="" id="12_spread_sauce4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/12_spread_sauce4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-13_pick_toy_drawer4X">
+          <video poster="" id="13_pick_toy_drawer4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/13_pick_toy_drawer4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-14_pour_cup4X">
+          <video poster="" id="14_pour_cup4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/14_pour_cup4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-clean_pan4X">
+          <video poster="" id="clean_pan4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/clean_pan4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-open_oven4X">
+          <video poster="" id="open_oven4X" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/open_oven4X.mp4"
                     type="video/mp4">
           </video>
         </div>
