--- a/index.html
+++ b/index.html
@@ -355,13 +355,13 @@
           </p>
         </div>
         <div class="content has-text-centered">
-          <video id="replay-video"
+          <video id="1_open_drawer4X"
                  controls
                  muted
                  preload
                  playsinline
                  width="75%">
-            <source src="./static/videos/replay.mp4"
+            <source src="./static/videos/1_open_drawer4X.mp4"
                     type="video/mp4">
           </video>
         </div>
