--- a/index.html
+++ b/index.html
@@ -365,6 +365,17 @@
                     type="video/mp4">
           </video>
         </div>
+        <div class="content has-text-centered">
+          <video id="2_stack_block4X"
+                 controls
+                 muted
+                 preload
+                 playsinline
+                 width="75%">
+            <source src="./static/videos/2_stack_block4X.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
         <!--/ Re-rendering. -->
 
       </div>
