--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     type="video/mp4">
           </video>
         </div>
-        <div class="content has-text-centered">
+        <!-- <div class="content has-text-centered">
           <video id="2_stack_block4X"
                  controls
                  muted
@@ -375,7 +375,7 @@
             <source src="./static/videos/2_stack_block4X.mp4"
                     type="video/mp4">
           </video>
-        </div>
+        </div> -->
         <!--/ Re-rendering. -->
 
       </div>
