--- a/index.html
+++ b/index.html
@@ -354,7 +354,20 @@
             viewpoint such as a stabilized camera by playing back the training deformations.
           </p>
         </div>
-        <div class="video-container">
+        <!-- <div class="video-container"> -->
+          <!-- <div class="video">
+            <video id="1_open_drawer4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/1_open_drawer4X.mp4" type="video/mp4">
+            </video>
+          </div> -->
+          <!-- <div class="video">
+            <video id="2_stack_block4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/202_stack_block4X.mp4" type="video/mp4">
+            </video>
+          </div> -->
+          <!-- 添加更多视频时，复制上面的<div class="video">...</div>块 -->
+        <!-- </div> -->
+        <div class="video-grid">
           <div class="video">
             <video id="1_open_drawer4X" controls muted preload playsinline width="100%">
               <source src="./static/videos/1_open_drawer4X.mp4" type="video/mp4">
@@ -365,8 +378,9 @@
               <source src="./static/videos/202_stack_block4X.mp4" type="video/mp4">
             </video>
           </div>
-          <!-- 添加更多视频时，复制上面的<div class="video">...</div>块 -->
+          <!-- 更多视频 -->
         </div>
+        
         <!--/ Re-rendering. -->
 
       </div>
