--- a/index.html
+++ b/index.html
@@ -376,12 +376,12 @@
           <!-- 更多视频 -->
         </div>
         <div class="video-small-grid">
-          <video controls src="1_open_drawer4X.mp4"></video>
-          <video controls src="2_stack_block4X.mp4"></video>
-          <video controls src="3_open_oven4X.mp4"></video>
-          <video controls src="4_pick_mango_plate4X.mp4"></video>
-          <video controls src="5_press_button4X.mp4"></video>
-          <video controls src="6_open_microwave_oven4X.mp4"></video>
+          <video controls src="./static/videos/1_open_drawer4X.mp4"></video>
+          <video controls src="./static/videos/2_stack_block4X.mp4"></video>
+          <video controls src="./static/videos/3_open_oven4X.mp4"></video>
+          <video controls src="./static/videos/4_pick_mango_plate4X.mp4"></video>
+          <video controls src="./static/videos/5_press_button4X.mp4"></video>
+          <video controls src="./static/videos/6_open_microwave_oven4X.mp4"></video>
         </div>
         <!--/ Re-rendering. -->
 
