--- a/index.html
+++ b/index.html
@@ -373,6 +373,16 @@
               <source src="./static/videos/1_open_drawer4X.mp4" type="video/mp4">
             </video>
           </div>
+          <div class="video">
+            <video id="2_stack_block4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/2_stack_block4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="3_open_oven4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/3_open_oven4X.mp4" type="video/mp4">
+            </video>
+          </div>
           <!-- 更多视频 -->
         </div>
 
@@ -388,11 +398,11 @@
       <div class="column is-full-width">
         <div class="video-small-grid">
           <video controls src="./static/videos/1_open_drawer4X.mp4"></video>
-          <video controls src="./static/videos/2_stack_block4X.mp4"></video>
+          <!-- <video controls src="./static/videos/2_stack_block4X.mp4"></video>
           <video controls src="./static/videos/3_open_oven4X.mp4"></video>
           <video controls src="./static/videos/4_pick_mango_plate4X.mp4"></video>
           <video controls src="./static/videos/5_press_button4X.mp4"></video>
-          <video controls src="./static/videos/6_open_microwave_oven4X.mp4"></video>
+          <video controls src="./static/videos/6_open_microwave_oven4X.mp4"></video> -->
         </div>
         <h2 class="title is-3">Related Links</h2>
 
