--- a/index.html
+++ b/index.html
@@ -391,6 +391,71 @@
               <source src="./static/videos/3_open_oven4X.mp4" type="video/mp4">
             </video>
           </div>
+          <div class="video">
+            <video id="4_pick_mango_plate4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/4_pick_mango_plate4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="5_press_button4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/5_press_button4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="6_open_microwave_oven4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/6_open_microwave_oven4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="7_put_tray_in_oven4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/7_put_tray_in_oven4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="8_turn_on_oven4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/8_turn_on_oven4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="9_sweep_table4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/9_sweep_table4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="10_insert_box4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/10_insert_box4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="11_brush_pan4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/11_brush_pan4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="12_spread_sauce4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/12_spread_sauce4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="13_pick_toy_drawer4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/13_pick_toy_drawer4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="14_pour_cup4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/14_pour_cup4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="clean_pan4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/clean_pan4X.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="video">
+            <video id="open_oven4X" controls muted preload playsinline width="100%">
+              <source src="./static/videos/open_oven4X.mp4" type="video/mp4">
+            </video>
+          </div>
           <!-- 更多视频 -->
         </div>
 
