--- a/index copy 2.html
+++ b/index copy 2.html
@@ -272,7 +272,7 @@
     <div class="columns is-centered">
 
       <!-- Visual Effects. -->
-      <!-- <div class="column">
+      <div class="column">
         <div class="content">
           <h2 class="title is-3">Visual Effects</h2>
           <p>
@@ -284,14 +284,14 @@
                     type="video/mp4">
           </video>
         </div>
-      </div> -->
+      </div>
       <!--/ Visual Effects. -->
 
       <!-- Matting. -->
-      <div class="column">
-        <!-- <h2 class="title is-3">Matting</h2> -->
-        <!-- <div class="columns is-centered">
-          <!-- <div class="column content">
+      <di v class="column">
+        <h2 class="title is-3">Matting</h2>
+        <div class="columns is-centered">
+          <div class="column content">
             <p>
               As a byproduct of our method, we can also solve the matting problem by ignoring
               samples that fall outside of a bounding box during rendering.
@@ -300,9 +300,9 @@
               <source src="./static/videos/matting.mp4"
                       type="video/mp4">
             </video>
-          </div> -->
+          </div>
 
-        <!-- </div> --> 
+        </div>
       </div>
     </div>
     <!--/ Matting. -->
@@ -319,50 +319,50 @@
     <!-- Animation. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <!-- <h2 class="title is-3">Animation</h2> -->
+        <h2 class="title is-3">Animation</h2>
 
         <!-- Interpolating. -->
-        <!-- <h3 class="title is-4">Interpolating states</h3> -->
-        <!-- <div class="content has-text-justified">
+        <h3 class="title is-4">Interpolating states</h3>
+        <div class="content has-text-justified">
           <p>
             We can also animate the scene by interpolating the deformation latent codes of two input
             frames. Use the slider here to linearly interpolate between the left frame and the right
             frame.
           </p>
-        </div> -->
+        </div>
         <div class="columns is-vcentered interpolation-panel">
-          <!-- <div class="column is-3 has-text-centered">
+          <div class="column is-3 has-text-centered">
             <img src="./static/images/interpolate_start.jpg"
                  class="interpolation-image"
                  alt="Interpolate start reference image."/>
             <p>Start Frame</p>
-          </div> -->
-          <!-- <div class="column interpolation-video-column">
+          </div>
+          <div class="column interpolation-video-column">
             <div id="interpolation-image-wrapper">
               Loading...
             </div>
             <input class="slider is-fullwidth is-large is-info"
                    id="interpolation-slider"
                    step="1" min="0" max="100" value="0" type="range">
-          </div> -->
-          <!-- <div class="column is-3 has-text-centered">
+          </div>
+          <div class="column is-3 has-text-centered">
             <img src="./static/images/interpolate_end.jpg"
                  class="interpolation-image"
                  alt="Interpolation end reference image."/>
             <p class="is-bold">End Frame</p>
-          </div> -->
+          </div>
         </div>
         <br/>
         <!--/ Interpolating. -->
 
         <!-- Re-rendering. -->
-        <!-- <h3 class="title is-4">Re-rendering the input video</h3>
+        <h3 class="title is-4">Re-rendering the input video</h3>
         <div class="content has-text-justified">
           <p>
             Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
             viewpoint such as a stabilized camera by playing back the training deformations.
           </p>
-        </div> -->
+        </div>
         <!-- <div class="video-container"> -->
           <!-- <div class="video">
             <video id="1_open_drawer4X" controls muted preload playsinline width="100%">
@@ -468,7 +468,7 @@
 
 
     <!-- Concurrent Work. -->
-    <!-- <div class="columns is-centered">
+    <div class="columns is-centered">
       <div class="column is-full-width">
 
         <h2 class="title is-3">Related Links</h2>
@@ -492,7 +492,7 @@
           </p>
         </div>
       </div>
-    </div> -->
+    </div>
     <!--/ Concurrent Work. -->
 
   </div>
