--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <div class="content">
               <h2 class="title is-3" style="font-size: 30px; text-align: center; font-weight: bold;">Abstract</h2>
               <p style="text-align: justify;font-size: 22px; font-family: 'Verdana', sans-serif;">
-                  Visual imitation learning (VIL) provides an efficient and intuitive strategy for robotic systems to acquire novel skills. Recent advancements in Vision Language Models (VLMs) have demonstrated remarkable performance in vision and language reasoning capabilities for VIL tasks. Despite the progress, current VIL methods naively employ VLMs to learn high-level plans from human videos, relying on pre-defined motion primitives for executing physical interactions, which remains a major bottleneck. In this work, we present VLMimic, a novel paradigm that harnesses VLMs to learn even fine-grained action levels, for a large variety of manipulation tasks only given a limited number of human videos. Specifically, VLMimic first grounds object-centric movements from human videos, and learns skills using hierarchical constraint representations, facilitating the derivation of fine-grained action levels from limited human videos. These skills are refined and updated through iterative comparison strategy, facilitating efficient adaption to unseen environments. Our extensive experiments exhibit that our VLMimic, using only 5 human videos, yields improvements exceeding 32% and 24% in RLBench and real-world manipulation tasks, and surpasses baselines by over 32% in long-horizon tasks.
+                  Visual imitation learning (VIL) provides an efficient and intuitive strategy for robotic systems to acquire novel skills. Recent advancements in Vision Language Models (VLMs) have demonstrated remarkable performance in vision and language reasoning capabilities for VIL tasks. Despite the progress, current VIL methods naively employ VLMs to learn high-level plans from human videos, relying on pre-defined motion primitives for executing physical interactions, which remains a major bottleneck. In this work, we present VLMimic, a novel paradigm that harnesses VLMs to directly learn even fine-grained action levels, only given a limited number of human videos. Specifically, VLMimic first grounds object-centric movements from human videos, and learns skills using hierarchical constraint representations, facilitating the derivation of skills with fine-grained action levels from limited human videos. These skills are refined and updated through an iterative comparison strategy, enabling efficient adaptation to unseen environments. Our extensive experiments exhibit that our VLMimic, using only 5 human videos, yields significant improvements of over 27% and 21% in RLBench and real-world manipulation tasks, and surpasses baselines by more than 37% in long-horizon tasks. 
                   <!-- Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
                   would be impossible without nerfies since it would require going through a wall. -->
               </p>
@@ -401,42 +401,42 @@
         </div>
         <h2 class="title is-3" style="font-size: 30px; text-align: center; font-weight: bold;">Long tasks</h2>
         <div class="video-long-grid">
-          <div class="item item-freecompress-chemistry_experiments">
+          <div class="video-long video-long-freecompress-chemistry_experiments">
             <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/long_task/freecompress-chemistry_experiments.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">chemistry experiments</p>
           </div>
-          <div class="item item-clean_table_video">
+          <div class="video-long video-long-clean_table_video">
             <video poster="" id="clean_table_video" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/long_task/clean_table_video.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">clean table</p>
           </div>
-          <div class="item item-make_a_pie_video">
+          <div class="video-long video-long-make_a_pie_video">
             <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/long_task/make_a_pie_video.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">make a pie</p>
           </div>
-          <div class="item item-freecompress-make_coffee_video">
+          <div class="video-long video-long-freecompress-make_coffee_video">
             <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/long_task/freecompress-make_coffee_video.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">make coffee</p>
           </div>
-          <div class="item item-make_slices_video">
+          <div class="video-long video-long-make_slices_video">
             <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/long_task/make_slices_video.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">make slices</p>
           </div>
-          <div class="item item-wash_pan_video">
+          <div class="video-long video-long-wash_pan_video">
             <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/long_task/wash_pan_video.mp4"
                       type="video/mp4">
