--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a>anonymous</a><sup>1</sup>,</span>
+              <a>Guangyan Chen</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Meiling Wang</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Te Cui</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Yao Mu</a><sup>2</sup>,</span>
+            <span class="author-block">
+              <a>Haoyang Lu</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Tianxing Zhou</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Zicai Peng</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Mengxiao Hu</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Haizhou Li</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Li Yuan</a><sup>3</sup>,</span>
+            <span class="author-block">
+              <a>Yi Yang</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a>Yufeng Yue</a><sup>1</sup>,</span>
             <!-- <span class="author-block">
               <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
             <span class="author-block">
@@ -70,7 +92,10 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>anonymous</span>
+            <span class="author-block"><sup>1</sup> Beijing Institute of Technology </span>
+            <span class="author-block"><sup>1</sup> The University of Hong Kong </span>
+            <span class="author-block"><sup>1</sup>  Peking University </span>
+            
             <!-- <span class="author-block"><sup>2</sup>Google Research</span> -->
           </div>
 
