--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     </div>
     <!--/ Animation. -->
     
-    <div>
+<!--     <div>
       <div class="column is-full-width">
         <div class="columns is-vcentered interpolation-panel">
         </div>
@@ -471,7 +471,7 @@
           <!-- 更多视频 -->
         </div>
 
-      </div>
+      </div> -->
     </div>
 
     <!-- Concurrent Work. -->
