--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <span class="author-block">
               <a>Li Yuan</a><sup>3</sup>,</span>
             <span class="author-block">
-              <a>Yi Yang</a><sup>1</sup>,</span>
+              <a>Yi Yang</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a>Yufeng Yue</a><sup>1</sup>,</span>
+              <a>Yufeng Yue</a><sup>1*</sup>,</span>
             <!-- <span class="author-block">
               <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
             <span class="author-block">
