--- a/index.html
+++ b/index.html
@@ -420,58 +420,58 @@
     </div>
     <!--/ Animation. -->
     
-<!--     <div>
+     <div>
       <div class="column is-full-width">
         <div class="columns is-vcentered interpolation-panel">
         </div>
-        <h2 class="title is-3" style="font-size: 30px; text-align: center; font-weight: bold;">Long tasks</h2>
+        <h2 class="title is-3" style="font-size: 30px; text-align: center; font-weight: bold;">High precision tasks</h2>
         <div class="video-long-grid">
           <div class="video-long video-long-freecompress-chemistry_experiments">
             <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/freecompress-chemistry_experiments.mp4"
+              <source src="./static/videos/long_task/1-5.mp4"
                       type="video/mp4">
             </video>
-            <p class="long-video-description">chemistry experiments</p>
+            <p class="long-video-description">1</p>
           </div>
           <div class="video-long video-long-clean_table_video">
             <video poster="" id="clean_table_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/clean_table_video.mp4"
+              <source src="./static/videos/long_task/2-5.mp4"
                       type="video/mp4">
             </video>
-            <p class="long-video-description">clean table</p>
+            <p class="long-video-description">2</p>
           </div>
           <div class="video-long video-long-make_a_pie_video">
             <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/make_a_pie_video.mp4"
+              <source src="./static/videos/long_task/3-5.mp4"
                       type="video/mp4">
             </video>
-            <p class="long-video-description">make a pie</p>
+            <p class="long-video-description">3</p>
           </div>
           <div class="video-long video-long-freecompress-make_coffee_video">
             <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/freecompress-make_coffee_video.mp4"
+              <source src="./static/videos/long_task/4-5.mp4"
                       type="video/mp4">
             </video>
-            <p class="long-video-description">make coffee</p>
+            <p class="long-video-description">4</p>
           </div>
           <div class="video-long video-long-make_slices_video">
             <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/make_slices_video.mp4"
+              <source src="./static/videos/long_task/5-5.mp4"
                       type="video/mp4">
             </video>
-            <p class="long-video-description">make slices</p>
+            <p class="long-video-description">5</p>
           </div>
           <div class="video-long video-long-wash_pan_video">
             <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/wash_pan_video.mp4"
+              <source src="./static/videos/long_task/6-5.mp4"
                       type="video/mp4">
             </video>
-            <p class="long-video-description">wash pan</p>
+            <p class="long-video-description">6</p>
           </div>
           <!-- 更多视频 -->
         </div>
 
-      </div> -->
+      </div>
     </div>
 
     <!-- Concurrent Work. -->
