--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Multimodal Language Models are Visual Imitation Learner for Fine-grained Actions </h1>
-
+          <h1 class="title is-1 publication-title">FMimic: Foundation Models are Fine-grained Action Learners from Human Videos </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a>Guangyan Chen</a><sup>1</sup>,</span>
@@ -59,19 +58,19 @@
             <span class="author-block">
               <a>Haoyang Lu</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a>Tianxing Zhou</a><sup>1</sup>,</span>
-            <span class="author-block">
               <a>Zicai Peng</a><sup>1</sup>,</span>
             <span class="author-block">
               <a>Mengxiao Hu</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a>Haizhou Li</a><sup>1</sup>,</span>
+              <a>Tianxing Zhou</a><sup>1</sup>,</span>
             <span class="author-block">
               <a>Li Yuan</a><sup>3</sup>,</span>
             <span class="author-block">
               <a>Yi Yang</a><sup>1*</sup>,</span>
             <span class="author-block">
               <a>Yufeng Yue</a><sup>1*</sup>,</span>
+            <span class="author-block">
+              <a>Mengyin Fu</a><sup>1</sup>,</span>
             <!-- <span class="author-block">
               <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
             <span class="author-block">
