--- a/index.html
+++ b/index.html
@@ -427,42 +427,42 @@
         <div class="video-long-grid">
           <div class="video-long video-long-freecompress-chemistry_experiments">
             <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/11-5.mp4"
+              <source src="./static/videos/11-5.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">1</p>
           </div>
           <div class="video-long video-long-clean_table_video">
             <video poster="" id="clean_table_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/21-5.mp4"
+              <source src="./static/videos/21-5.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">2</p>
           </div>
           <div class="video-long video-long-make_a_pie_video">
             <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/31-5.mp4"
+              <source src="./static/videos/31-5.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">3</p>
           </div>
           <div class="video-long video-long-freecompress-make_coffee_video">
             <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/41-5.mp4"
+              <source src="./static/videos/41-5.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">4</p>
           </div>
           <div class="video-long video-long-make_slices_video">
             <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/51-5.mp4"
+              <source src="./static/videos/51-5.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">5</p>
           </div>
           <div class="video-long video-long-wash_pan_video">
             <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/long_task/61-5.mp4"
+              <source src="./static/videos/61-5.mp4"
                       type="video/mp4">
             </video>
             <p class="long-video-description">6</p>
