--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-freecompress-chemistry_experiments">
           <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/freecompress-chemistry_experiments.mp4"
+            <source src="./static/videos/11-5.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -174,25 +174,25 @@
         </div>
         <div class="item item-make_a_pie_video">
           <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/make_a_pie_video.mp4"
+            <source src="./static/videos/21-5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-freecompress-make_coffee_video">
           <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/freecompress-make_coffee_video.mp4"
+            <source src="./static/videos/long_task/31-5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-make_slices_video">
           <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/make_slices_video.mp4"
+            <source src="./static/videos/long_task/41-5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-wash_pan_video">
           <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/wash_pan_video.mp4"
+            <source src="./static/videos/long_task/51-5.mp4"
                     type="video/mp4">
           </video>
         </div>
