--- a/index.html
+++ b/index.html
@@ -166,12 +166,6 @@
                     type="video/mp4">
           </video>
         </div>
-        <div class="item item-clean_table_video">
-          <video poster="" id="clean_table_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/clean_table_video.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
         <div class="item item-make_a_pie_video">
           <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/21-5.mp4"
@@ -180,23 +174,28 @@
         </div>
         <div class="item item-freecompress-make_coffee_video">
           <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/31-5.mp4"
+            <source src="./static/videos/31-5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-make_slices_video">
           <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/41-5.mp4"
+            <source src="./static/videos/41-5.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-wash_pan_video">
           <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/long_task/51-5.mp4"
+            <source src="./static/videos/51-5.mp4"
                     type="video/mp4">
           </video>
         </div>
-
+        <div class="item item-wash_pan_video">
+          <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/61-5.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
   </div>
