--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Comming soon">
   <meta name="keywords" content="Comming soon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Multimodal Language Models are Visual Imitation Learner for Fine-grained Actions</title>
+  <title>FMimic: Foundation Models are Fine-grained Action Learners from Human Videos</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
