--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
             <span class="author-block">
               <a>Li Yuan</a><sup>3</sup>,</span>
             <span class="author-block">
+              <a>Mengyin Fu</a><sup>1</sup>,</span>
+            <span class="author-block">
               <a>Yi Yang</a><sup>1*</sup>,</span>
             <span class="author-block">
               <a>Yufeng Yue</a><sup>1*</sup>,</span>
-            <span class="author-block">
-              <a>Mengyin Fu</a><sup>1</sup>,</span>
+
             <!-- <span class="author-block">
               <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
             <span class="author-block">
@@ -471,7 +472,58 @@
 
       </div>
     </div>
+     <div>
+      <div class="column is-full-width">
+        <div class="columns is-vcentered interpolation-panel">
+        </div>
+        <h2 class="title is-3" style="font-size: 30px; text-align: center; font-weight: bold;">Long tasks</h2>
+        <div class="video-long-grid">
+          <div class="video-long video-long-freecompress-chemistry_experiments">
+            <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/freecompress-chemistry_experiments.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">chemistry experiments</p>
+          </div>
+          <div class="video-long video-long-clean_table_video">
+            <video poster="" id="clean_table_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/clean_table_video.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">clean table</p>
+          </div>
+          <div class="video-long video-long-make_a_pie_video">
+            <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/make_a_pie_video.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">make a pie</p>
+          </div>
+          <div class="video-long video-long-freecompress-make_coffee_video">
+            <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/freecompress-make_coffee_video.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">make coffee</p>
+          </div>
+          <div class="video-long video-long-make_slices_video">
+            <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/make_slices_video.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">make slices</p>
+          </div>
+          <div class="video-long video-long-wash_pan_video">
+            <video poster="" id="wash_pan_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/wash_pan_video.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">wash pan</p>
+          </div>
+          <!-- 更多视频 -->
+        </div>
 
+      </div>
     <!-- Concurrent Work. -->
     <!-- <div class="columns is-centered">
       <div class="column is-full-width">
