--- a/index.html
+++ b/index.html
@@ -163,25 +163,25 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-freecompress-chemistry_experiments">
           <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/11-5.mp4"
+            <source src="./static/videos/2_stack_block4X.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-make_a_pie_video">
           <video poster="" id="make_a_pie_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/21-5.mp4"
+            <source src="./static/videos/3_open_oven4X.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-freecompress-make_coffee_video">
           <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/31-5.mp4"
+            <source src="./static/videos/freecompress-chemistry_experiments.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-make_slices_video">
           <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/41-5.mp4"
+            <source src="./static/videos/make_a_pie_video.mp4"
                     type="video/mp4">
           </video>
         </div>
