--- a/index.html
+++ b/index.html
@@ -453,6 +453,27 @@
             </video>
             <p class="long-video-description">Star</p>
           </div>
+          <div class="video-long video-long-freecompress-make_coffee_video">
+            <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/7-5.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">Rectangle</p>
+          </div>
+          <div class="video-long video-long-freecompress-make_coffee_video">
+            <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/8-5.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">Round</p>
+          </div>
+          <div class="video-long video-long-freecompress-make_coffee_video">
+            <video poster="" id="freecompress-make_coffee_video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/9-5.mp4"
+                      type="video/mp4">
+            </video>
+            <p class="long-video-description">Pear</p>
+          </div>
           <div class="video-long video-long-make_slices_video">
             <video poster="" id="make_slices_video" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/51-5.mp4"
