--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <div class="columns is-vcentered interpolation-panel">
         </div>
         <h2 class="title is-3" style="font-size: 30px; text-align: center; font-weight: bold;">High precision tasks</h2>
-        <div class="video-long-grid">
+        <div class="video-grid">
           <div class="video-long video-long-freecompress-chemistry_experiments">
             <video poster="" id="freecompress-chemistry_experiments" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/11-5.mp4"
